# ollama_telegrambot_api

./: .gitignore  README.md  example_script.py  pyproject.toml  requirements.txt  sql_logger.py  telegram_ollamabot.py  twinbot_script.py
src/ollama_telegrambot_api/: agent.py  sql_logger.py
