[build-system]
requires = ["setuptools>=61.0", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama_telegrambot_api"
version = "1.0.0"
description = "This repository provides an API to make available a local Ollama Model through a Telegrambot."
authors = [
    { name = "Didac Cristobal", email = "didac.crst@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools",
    "toml",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ollama_telegrambot_api"]